# OpenCCO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  render.pgm3d  render.vol  result.eps  testCCO_10.eps  testCCO_2.eps  testCCO_200.eps  testCCO_3.eps  testCCO_3000.eps  testCCO_6.eps  tree_2D.xml
.ipol/: Dockerfile  plotStatRadius.plt  run.sh
CCO_Algorithm/: CMakeLists.txt  testCCO.cpp
CCO_Algorithm/Data/: InterTree_Nt10_kt2_s420_M301_distal.txt  InterTree_Nt10_kt2_s420_M301_proximal.txt  NoCom_Nt10_s420_M301_distal.txt  NoCom_Nt10_s420_M301_res.txt
CCO_Algorithm/Data/Nt10_kt10_s42_M301/: NoCom_Nt10_s42_M301_TerminalSeeds.txt
CCO_Algorithm/Data/Nt40_kt10_s501_M301/: NoCom_Nt40_s501_M301_distal.txt
CCO_Algorithm/buildXcode/: CMakeCache.txt  cmake_install.cmake
CCO_Algorithm/buildXcode/CCO_Algorithm.build/Debug/ZERO_CHECK.build/: Script-D0EDBA289B2A5FF2F00B7C1E.sh
CCO_Algorithm/buildXcode/CCO_Algorithm.build/Debug/testCCO.build/Objects-normal/x86_64/: testCCO.LinkFileList  testCCO.d
CCO_Algorithm/buildXcode/CCO_Algorithm.xcodeproj/: project.pbxproj
CCO_Algorithm/buildXcode/CCO_Algorithm.xcodeproj/project.xcworkspace/xcuserdata/kerautre.xcuserdatad/: UserInterfaceState.xcuserstate
CCO_Algorithm/buildXcode/CCO_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CCO_Algorithm/buildXcode/CCO_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcschemes/: xcschememanagement.plist
CCO_Algorithm/buildXcode/CMakeScripts/: ReRunCMake.make
CCO_Algorithm/buildXcode/Debug/: testCCO  testCCO1.eps  testCCO2.eps
Kamiya_s_Algorithm/: CMakeLists.txt  testKamiya.cpp
Kamiya_s_Algorithm/buildXCode/: CMakeCache.txt  cmake_install.cmake
Kamiya_s_Algorithm/buildXCode/CMakeScripts/: ReRunCMake.make
Kamiya_s_Algorithm/buildXCode/Debug/: logoDGtal.eps  res.gnuplot  resultFig.eps  testKamiya
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.build/Debug/ALL_BUILD.build/: Script-8B9ECCCE37DEA657EF7DDD2F.sh
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.build/Debug/ZERO_CHECK.build/: Script-9641496F36564F4AD04C52B6.sh
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.build/Debug/testKamiya.build/Objects-normal/x86_64/: testKamiya.LinkFileList  testKamiya.d
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.xcodeproj/: project.pbxproj
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.xcodeproj/project.xcworkspace/xcuserdata/kerautre.xcuserdatad/: UserInterfaceState.xcuserstate
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.xcodeproj/xcshareddata/xcschemes/: testKamiya.xcscheme
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Kamiya_s_Algorithm/buildXCode/Kamiya_s_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcschemes/: xcschememanagement.plist
Samples/: bunnyThickBdr.vol  domain3D.vol  plotStatRadius.plt  shape.pgm  shape2.pgm  shape3.pgm  shape3.xcf  shape4.pgm  shapeHoles.pgm  shapeHoles2.pgm  tore.vol
Schreiner_Algorithm/: CMakeLists.txt  testGeom.cpp  testSchreiner.cpp
Schreiner_Algorithm/buildXcode/: CMakeCache.txt  cmake_install.cmake
Schreiner_Algorithm/buildXcode/CMakeScripts/: ReRunCMake.make
Schreiner_Algorithm/buildXcode/Debug/: testBase0.eps  testBase2.eps  testBase3.eps  testBase4.eps  testBase5.eps  testGeom  testIntersection1.eps  testNoIntersect.eps  testRandomAdd.eps  testRandomAdd2.eps  testSchreiner
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.build/Debug/ZERO_CHECK.build/: Script-67ABAACA114292420EF8CBB5.sh
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.build/Debug/testGeom.build/Objects-normal/x86_64/: CoronaryArteryTree.d  testGeom.LinkFileList  testGeom.d
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.build/Debug/testSchreiner.build/Objects-normal/x86_64/: testSchreiner.LinkFileList  testSchreiner.d
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.xcodeproj/: project.pbxproj
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.xcodeproj/project.xcworkspace/xcuserdata/kerautre.xcuserdatad/: UserInterfaceState.xcuserstate
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Schreiner_Algorithm/buildXcode/Schreiner_s_Algorithm.xcodeproj/xcuserdata/kerautre.xcuserdatad/xcschemes/: xcschememanagement.plist
Schreiner_Algorithm/old/: CMakeLists.txt  TestGeneration3D.cpp  TestGenerationTreshold.cpp  testGeomTools.cpp
Schreiner_Algorithm/src/: CoronaryArteryTree.cpp  CoronaryArteryTree.h
Tools/: CMakeLists.txt  vascuSynth2graph.swift
base/: CoronaryArteryTree.cpp  CoronaryArteryTree.h  CoronaryArteryTree.ih
buildXcode/: CMakeCache.txt  cmake_install.cmake
cmake/: dgtal.cmake
ext/: insighttoolkit5_5.2.1-5.debian.tar.xz  libinsighttoolkit4-dev_4.13.3withdata-dfsg1-4_i386.deb  libinsighttoolkit5-dev_5.2.1-5+b3_amd64.deb
graphAnalysis/: CMakeLists.txt
graphAnalysis/SrcGraph2statBifRad/: main.swift
graphAnalysis/SrcXml2graph/: main.swift
old/: TEST.cpp  (+3 more)
tests/: CMakeLists.txt  TreeTest.h  testCCO.cpp  testCompCCO.cpp  testGenerateTree.cpp  testGeom.cpp  testGeom3d.cpp  testKamiya.cpp  testSchreiner.cpp
tools/: CMakeLists.txt  CMakelists.txt  TreeImageRenderer.cpp  TreeImageRenderer.h  generateEmptyDomain.cpp  generateTestDomain.cpp  graph2render.cpp  mergeObj.cpp
tools/Samples/: edges.txt  tree_structure.xml  vertex.txt
tools/graphAnalysis/SrcGraph2statBifRad/: main.swift
tools/graphAnalysis/SrcXml2graph/: xml2graph.swift
tools/renderer/: CMakeLists.txt  TreeImageRenderer.cpp  TreeImageRenderer.h  animationRenderer.cpp  flowRenderer.cpp  graph2render.cpp  realisticRenderer.cpp  skeletonRenderer.cpp
tools/renderer/src_svg_export/: svg_attributes.cpp  svg_attributes.h  svg_elements.cpp  svg_elements.h
tools/renderers/: TreeImageRenderer.cpp  TreeImageRenderer.h  animationRenderer.cpp  basicRenderer.cpp  flowRenderer.cpp  realisticRenderer.cpp  skeletonRenderer.cpp
tools/renderers/src_svg_export/: streamable.cpp  streamable.h  svg_attributes.cpp  svg_elements.h
(+113 files in other folders)
